add_library(HLEAudio 
                    ABI1.cpp
                    ABI2.cpp
                    ABI3.cpp
                    ABI3mp3.cpp 
                    AudioBuffer.cpp
                    ABI_ADPCM.cpp 
                    ABI_Buffers.cpp 
                    ABI_Filters.cpp 
                    ABI_MixerInterleave.cpp 
                    ABI_Resample.cpp
                    ENV_Mixer.cpp 
                    HLEAudioState.cpp
                    HLEMain.cpp 
                    )