if(PSP)
add_library(Audio_Plugin OBJECT PSP/AudioPluginPSP.cpp )
elseif(DAEDLAUS_CTR)
add_library(Audio_Plugin OBJECT CTR/AudioOutput.cpp CTR/AudioPluginCTR.cpp)
elseif(WIN32)
add_library(Audio_Plugin OBJECT Windows/AudioPluginW32.cpp)
elseif(APPLE AND NOT UNIX)
add_library(Audio_Plugin OBJECT macOS/AudioPluginOSX.cpp )
else()
add_library(Audio_Plugin OBJECT SDL/AudioPluginSDL.cpp)
endif()

list(APPEND daed_libs "Audio_Plugin")
set(daed_libs ${daed_libs} PARENT_SCOPE)