add_library(DynaRec_PSP OBJECT
                            AssemblyWriterPSP.cpp 
                            AssemblyUtilsPSP.cpp 
                            CodeBufferManagerPSP.cpp 
                            CodeGeneratorPSP.cpp 
                            DynaRecDebug.cpp
                            DynaRecStubs.S 
                            N64RegisterCachePSP.cpp
            )